refactoring - removing uneeded imports - changing new Integer to Integer.value...